<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2021 TenX-OS

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Realme Parts -->
    <string name="advanced_settings">Realme Parts</string>
    <string name="advanced_settings_summary">Device Specific Customisations</string>

    <!-- Gestures -->
    <string name="gestures_title">Gestures</string>
    
    <!-- DT2W -->
    <string name="dt2w_title">Double-Tap to wake</string>
    <string name="dt2w_summary">When Double-tap to wake is enabled, you can touch the screen twice to turn it on</string>

    <!-- Vibration Slider -->
    <string name="vibrator_intensity">Vibration</string>
    <string name="vibrator_intensity_control">Intensity</string>
    <string name="vibrator_intensity_summary">Allows user to change the vibration intensity</string>

    <!-- Custom seekbar -->
    <string name="custom_seekbar_value">Value: <xliff:g id="v">%s</xliff:g></string>
    <string name="custom_seekbar_default_value">Default</string>
    <string name="custom_seekbar_default_value_to_set">Default value: <xliff:g id="v">%s</xliff:g>\nLong press to set</string>
    <string name="custom_seekbar_default_value_is_set">Default value is set</string>

    <!-- otg mode -->
    <string name="misc_title">Misc</string>
    <string name="otg_mode_summary">Enable USB-OTG power supply for external headphones and flash drives</string>
    <string name="otg_mode_title">Enable USB-OTG</string>
    <string name="tile_otg_mode">Enable USB-OTG</string>

    <!-- DC dimming -->
    <string name="dc_mode_summary">Reduces screen flicker while brightness is low</string>
    <string name="dc_mode_title">DC-Dimming</string>
    <string name="tile_dc_mode">DC-Dimming</string>

    <!-- HBM mode -->
    <string name="hbm_mode_summary">Peak brightness for better visibility in outdoors</string>
    <string name="hbm_mode_title">High brightness mode</string>
    <string name="tile_hbm_mode">High brightness modes</string>

    <!-- srgb mode -->
    <string name="srgb_mode_summary">sRGB mode for simpler colour display</string>
    <string name="srgb_mode_title">sRGB mode</string>
    <string name="tile_srgb_mode">sRGB</string>

    <!-- game mode -->
    <string name="game_mode_summary">Boost Touch Sampling Rate</string>
    <string name="game_mode_title">Game Mode</string>
    <string name="tile_game_mode">Game Mode</string>

    <!-- Superdart Charging -->
    <string name="super_dart_title">SuperDart Charging</string>
    <string name="super_dart_summary">If enabled, device charges at a rate of 65W</string>
    <string name="tile_super_dart">SuperDart</string>
    <string name="power_title">Power</string>

    <!-- Scrolling -->
    <string name="smooth_scroll_title">Smooth Scrolling</string>
    <string name="smooth_scroll_summary">Allow device to scroll smoothly</string>
    <string name="sensitive_level_title">Sensitivity</string>
    <string name="sensitive_level_summary">Improves touch sensitivity</string>

</resources>
